<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) Telicent Ltd.
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
        http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.telicent.smart-caches.graph</groupId>
  <artifactId>scg-base</artifactId>
  <packaging>pom</packaging>
  <version>0.80.2-SNAPSHOT</version>

  <name>Telicent Smart Cache Graph - Parent</name>
  <description>Telicent Smart Cache Graph</description>
  <url>https://github.com/telicent-oss/smart-cache-graph</url>

  <scm>
    <connection>scm:git:git@github.com:Telicent-oss/smart-cache-graph</connection>
    <developerConnection>scm:git:git@github.com:Telicent-oss/smart-cache-graph</developerConnection>
    <url>https://github.com/telicent-oss/smart-cache-graph</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Telicent Developers</name>
      <email>opensource@telicent.io</email>
      <organization>Telicent Ltd</organization>
      <organizationUrl>https://telicent.io</organizationUrl>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputTimestamp>2024-06-05T11:09:55Z</project.build.outputTimestamp>

    <java.version>21</java.version>

    <ver.rdf-abac>0.71.2</ver.rdf-abac>
    <ver.fuseki-kafka>1.3.2</ver.fuseki-kafka>
    <ver.jena>5.0.0</ver.jena>
    <ver.fuseki-server>${ver.jena}</ver.fuseki-server>
    <ver.graphql>0.6.0</ver.graphql>
    <ver.testcontainers>1.19.8</ver.testcontainers>

    <!-- These must be in-step. -->
    <ver.otel>1.32.0</ver.otel>
    <ver.otel-semconv>1.30.1-alpha</ver.otel-semconv>

    <ver.kotlin>2.0.0</ver.kotlin>
    <ver.jwt-servlet-auth>0.15.0</ver.jwt-servlet-auth>
    <ver.smart-caches-core>0.21.0</ver.smart-caches-core>
    <ver.slf4j>2.0.13</ver.slf4j>
    <ver.log4j2>2.23.1</ver.log4j2>
    <ver.logback>1.5.6</ver.logback>

    <ver.junit5>5.10.3</ver.junit5>
    <ver.junit5-platform>1.10.3</ver.junit5-platform>
    <ver.mockito>5.12.0</ver.mockito>

    <ver.plugin.owasp-dependency-check>10.0.0</ver.plugin.owasp-dependency-check>
    <ver.plugin.compiler>3.13.0</ver.plugin.compiler>
    <ver.plugin.jar>3.4.2</ver.plugin.jar>
    <ver.plugin.source>3.3.1</ver.plugin.source>
    <ver.plugin.surefire>3.3.0</ver.plugin.surefire>
    <ver.plugin.javadoc>3.7.0</ver.plugin.javadoc>
    <ver.plugin.resources>3.3.1</ver.plugin.resources>
    <ver.plugin.deploy>3.1.2</ver.plugin.deploy>
    <ver.plugin.dependency>3.7.1</ver.plugin.dependency>
    <ver.plugin.enforcer>3.4.1</ver.plugin.enforcer>
    <ver.plugin.clean>3.3.2</ver.plugin.clean>
    <ver.plugin.install>3.1.1</ver.plugin.install>
    <ver.plugin.site>3.9.1</ver.plugin.site>
    <ver.plugin.cyclonedx>2.8.0</ver.plugin.cyclonedx>
    <ver.plugin.shade>3.4.1</ver.plugin.shade>
    <ver.plugin.versions>2.17.0</ver.plugin.versions>
    <ver.plugin.gpg>3.2.4</ver.plugin.gpg>
    <ver.plugin.nexus>1.7.0</ver.plugin.nexus>

  </properties>

  <modules>
    <module>scg-system</module>
    <module>scg-server</module>
    <module>scg-docker</module>
  </modules>

  <dependencyManagement>
    <dependencies>

      <!-- Complete Fuseki Main server as a single jar -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-server</artifactId>
        <version>${ver.jena}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-main</artifactId>
        <version>${ver.jena}</version>
        <exclusions>
          <exclusion>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Fuseki-Kafka connector -->
      <dependency>
        <groupId>io.telicent.jena</groupId>
        <artifactId>jena-fuseki-kafka-module</artifactId>
        <version>${ver.fuseki-kafka}</version>
        <exclusions>
          <exclusion>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- ABAC engine -->
      <dependency>
        <!-- Used in scg-system -->
        <groupId>io.telicent.jena</groupId>
        <artifactId>rdf-abac-fuseki</artifactId>
        <version>${ver.rdf-abac}</version>
      </dependency>
      <dependency>
        <groupId>io.telicent.jena</groupId>
        <artifactId>rdf-abac-fmod</artifactId>
        <version>${ver.rdf-abac}</version>
      </dependency>

      <!-- Authentication -->
      <dependency>
        <groupId>io.telicent.public</groupId>
        <artifactId>jwt-servlet-auth-aws</artifactId>
        <version>${ver.jwt-servlet-auth}</version>
        <exclusions>
          <exclusion>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>io.telicent.public</groupId>
        <artifactId>jwt-servlet-auth-servlet5</artifactId>
        <version>${ver.jwt-servlet-auth}</version>
      </dependency>
      <dependency>
        <groupId>io.telicent.smart-caches</groupId>
        <artifactId>jwt-auth-common</artifactId>
        <version>${ver.smart-caches-core}</version>
      </dependency>

      <!-- 
           Apache Jena has some level controls
           and the scg-system test suite touches that code.
      -->
      <!--
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j2-impl</artifactId>
        <version>${ver.log4j2}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${ver.log4j2}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${ver.log4j2}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>


      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${ver.logback}</version>
      </dependency>
      <!-- GraphQL -->
      <dependency>
        <groupId>io.telicent.jena.graphql</groupId>
        <artifactId>graphql-fuseki-module</artifactId>
        <version>${ver.graphql}</version>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>io.telicent.jena.graphql</groupId>
        <artifactId>telicent-graph-schema</artifactId>
        <version>${ver.graphql}</version>
      </dependency>

      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-bom</artifactId>
        <version>${ver.otel}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>  
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-semconv</artifactId>
        <version>${ver.otel-semconv}</version>
      </dependency>

      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-sdk-testing</artifactId>
        <version>${ver.otel}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>io.opentelemetry.javaagent</groupId>
        <artifactId>opentelemetry-javaagent</artifactId>
        <scope>runtime</scope>
        <version>${ver.otel}</version>
      </dependency>
      
      <!-- For open telemetry -->
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-stdlib</artifactId>
        <version>${ver.kotlin}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-stdlib-common</artifactId>
        <version>${ver.kotlin}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${ver.mockito}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${ver.mockito}</version>
        <scope>test</scope>
      </dependency>

      <!-- Testing -->

      <!-- Testing with Kafka -->
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>kafka</artifactId>
        <version>${ver.testcontainers}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- JUnit 5 -->
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-suite</artifactId>
        <version>${ver.junit5-platform}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${ver.junit5}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${ver.junit5}</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${ver.plugin.compiler}</version>
          <configuration>
            <release>${java.version}</release>
            <compilerArgument>-proc:none</compilerArgument>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${ver.plugin.source}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
              <phase>package</phase>
              <configuration>
                <classifier>sources</classifier>
              </configuration>
            </execution>
            <execution>
              <id>attach-sources-test</id>
              <goals>
                <goal>test-jar-no-fork</goal>
              </goals>
              <phase>package</phase>
              <configuration>
                <classifier>test-sources</classifier>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${ver.plugin.jar}</version>
          <configuration>
            <archive>
              <manifest> 
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${ver.plugin.owasp-dependency-check}</version>
        </plugin>
        

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${ver.plugin.surefire}</version>
          <configuration>
            <!-- Add Java argument here -->
            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${ver.plugin.javadoc}</version>
          <configuration> 
            <doclint>none</doclint>
          </configuration>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
	        <version>${ver.plugin.resources}</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${ver.plugin.deploy}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${ver.plugin.dependency}</version>
        </plugin> 

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.6.0</version>
         </plugin> 

         <!-- SBOM : CycloneDX -->
         <plugin>
           <groupId>org.cyclonedx</groupId>
           <artifactId>cyclonedx-maven-plugin</artifactId>
           <version>${ver.plugin.cyclonedx}</version>
           <executions>
             <execution>
               <id>build-sbom-cyclonedx</id>
               <phase>package</phase>
               <goals>
              <goal>makeAggregateBom</goal>
               </goals>
             </execution>
           </executions>
           <configuration>
             <outputName>${project.artifactId}-${project.version}-bom</outputName>
           </configuration>
         </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${ver.plugin.versions}</version>
          <configuration>
            <ignoredVersions>.*[-\.]M.*,.*-alpha.*,.*-RC.*</ignoredVersions>
          </configuration>
        </plugin>
      </plugins>
      
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.cyclonedx</groupId>
        <artifactId>cyclonedx-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${ver.plugin.gpg}</version>
        <executions>
          <execution>
            <goals>
              <goal>sign</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>${ver.plugin.nexus}</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>sonatype-oss</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
          <keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
          <stagingProgressTimeoutMinutes>15</stagingProgressTimeoutMinutes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <snapshotRepository>
      <id>sonatype-oss</id>
      <name>Sonatype OSS Snapshots</name>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>sonatype-oss</id>
      <name>Sonatype OSS</name>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

</project>
